--- a/libs/jade/forms/fields-conditional.jade
+++ b/libs/jade/forms/fields-conditional.jade
@@ -9,7 +9,7 @@ block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: dir + "index.html"},
 		{title: "Forms", href: dir + "index.html#Forms"},
-		{title: "Fields"}])
+		{title: "Conditional fields"}])
 
 block sidebar
 	include /template/sidebar-forms.jade
@@ -38,6 +38,14 @@ block script
 				}
 			});
 		});
+
+block section-notice
+	aside.section-notice__changing
+		h2.screenreader Notice
+		.section-notice__content
+			p
+				span.badge CAUTION
+				| This design pattern is still being developed and tested.
 
 block content
 	.articleContent
