fix: Fixed focus states on conditional checkboxes Also tidied the styles and removed a lot of unused code

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -609,7 +609,7 @@ input[class*="dob-"] {
     }
 }
 
-// Conditional field content
+// Conditional radio buttons + checkboxes
 .radio--conditional {
     clear: both;
     float: left;
@@ -617,7 +617,6 @@ input[class*="dob-"] {
     display: table;
     p {
         display: block;
-        //float: right;
         display: table-cell;
         margin: 0;
         span {
@@ -626,131 +625,46 @@ input[class*="dob-"] {
     }
     input {
         display: inline-block;
-        &:before {
-            content: '';
-            display: block;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            position: absolute;
-            -webkit-user-select: none;
-            cursor: pointer;
-            border-radius: @form-border-radius;
-            border: 1px solid @gray-6;
-            z-index: -1;
-            background-color: @gray-8;
-            box-sizing: border-box;
-            margin-right: @box-spacing/2;
+        &:checked:before {
+            background-color: @heritage-blue-lightest;
         }
-        &:hover:before {
-            border-color: @gray-5;
+        &:checked:focus:before,
+        &:checked:focus:hover:before,
+        &:focus:hover:before  {
+            border-color: @heritage-yellow;
         }
-        &:disabled {
-            cursor: not-allowed !important;
-            &:before {
-                cursor: not-allowed !important;
-                background-color: @form-disabled-bg;
-                border-color: @form-disabled-bg;
-            }
-        }
-        &:checked {
-            &:before {
-                border-color: @blue-light;
-                background-color: @heritage-blue-lightest;
-            }
-            &:hover:before {
-                border-color: @blue-light;
-            }
-        }
-        &:focus {
-            outline: 2px solid @heritage-yellow;
-        }
-    }
-}
-.radio--conditional {
-    input:not(checked) ~ .conditional--content {
+        &:not(checked) ~ .conditional--content {
             display: none;
-    }
-    input:checked ~ .conditional--content {
+        }
+        &:checked ~ .conditional--content {
             display: block;
+        }
     }
-}
 
-.conditional--content {
-    fieldset, .fieldset {
+    .conditional--content {
         label {
             font-weight: @font-weight-bold;
             padding: @box-spacing-vertical*.75 @box-spacing-vertical;
-            background-color: transparent;
+            margin-bottom: 0;
         }
-        input[type="checkbox"] {
-            padding: 0.75rem 1rem;
-        }
-    }
-    input {
-        display: inline-block;
-        &:before {
-            content: '';
-            display: block;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            position: absolute;
-            -webkit-user-select: none;
-            cursor: pointer;
-            border-radius: @form-border-radius;
-            border: 1px solid @gray-6;
-            z-index: -1;
+        input:before {
             background-color: @white;
-            box-sizing: border-box;
-            margin-right: @box-spacing/2;
         }
-        &:hover:before {
-            border-color: @gray-5;
-        }
-        &:disabled {
-            cursor: not-allowed !important;
-            &:before {
-                cursor: not-allowed !important;
-                background-color: @form-disabled-bg;
-                border-color: @form-disabled-bg;
-            }
-        }
-        &:checked {
-            &:before {
-                border-color: @blue-light;
-                background-color: @blue-lighter;
-            }
-            &:hover:before {
-                border-color: @blue-light;
-            }
-        }
-        &:focus {
-            outline: 2px solid @heritage-yellow;
+        input:checked:before {
+            background-color: @blue-lighter;
         }
     }
 }
 
+// Conditional radio buttons with field beneath
 .conditional ~ .conditional--fields {
     border-left: .5rem solid @blue-lighter;
     padding: @box-spacing-vertical 0;
     padding-left: @box-spacing-horizontal;
-    //background-color: @blue-lighter;
     margin-top: -.5rem;
     margin-bottom: 1rem;
     display: none;
     position: relative;
-    /*&:before {
-        height: 100%;
-        width: .5rem;
-        background-color: @blue-lighter;
-        position: absolute;
-        top: 0;
-        left: 0;
-        content: '';
-    }*/
 }
 
 .response {
