dev:change: Adding volunteering roled to bureau page

--- a/libs/jade/dev/site/bureau.jade
+++ b/libs/jade/dev/site/bureau.jade
@@ -85,7 +85,6 @@ block content
 				p Alternatively, drop in to Thorne bureau on a Monday between 10:00-2:00 and Wednesday between 10:00-12:30 where a face to face assessment will be conducted.
 				p Forthcoming closures:
 				p **Please note that we are closed on Bank Holidays**
-
 			.col-sm-4
 				h2 Access details
 				p #[span.i &#x267f;] Wheelchair accessible
@@ -96,6 +95,8 @@ block content
 					br
 					| Internet advice access
 
+	.fullwidth-content
+		.flex-row
 			.col-sm-12
 				h2 Advice session times
 
@@ -178,3 +179,21 @@ block content
 			.flex-row
 				.col-sm-12
 					iframe(src="https://fusiontables.googleusercontent.com/fusiontables/embedviz?q=select+col2+from+16BWr4oiZboc2VpRHEJt37SmzHVoN-EzKM9aLkkMQ+where+col1+in+(%27Super+tester%27,+%27Tester%27,+%27Not+signed+up%27)&viz=MAP&h=false&lat=52.36404897789263&lng=-1.6940654999999651&t=1&z=7&l=col2&y=2&tmplt=2&hml=ONE_COL_LAT_LNG", width="100%", height="300px", scrolling="no")
+
+	.fullwidth
+		.fullwidth-content
+			h2(style="margin-top: 0;") Volunteering roles
+			.flex-row
+				.col-sm-7
+					p Our volunteers come from all sorts of backgrounds and help with everything we do: fundraising, IT, administration, campaigning, trusteeship - and, of course, giving advice.
+					a.blocklink(href="#") Looking for Adviceline Telephone Assessor
+					a.blocklink(href="#") Gateway assessor
+					a.blocklink(href="#") Office admin
+					a.blocklink(href="#") Receptionist
+					a.blocklink(href="#") Adviser
+					a.blocklink(href="#") Financial Capability
+					a.blocklink(href="#") Financial education worker
+					a.blocklink(href="#") Fundraising
+					a.blocklink(href="#") IT
+					a.blocklink(href="#") Social policy/campaigner
+					a.blocklink(href="#") Telephone Adviser and Trustee
