fix: Adding G+ icon back in It's still needed for the sidebar sharing

--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -370,6 +370,11 @@
     .icon;
 }
 
+.icon-google:before {
+    content: @i-google;
+    .icon;
+}
+
 // For breadcrumbs
 .icon-guillemet-right:before {
     content: @i-angle-right;
