--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -284,3 +284,5 @@
 @i-hearing-loop:			"\e908";
 @i-wheelchair-access:		"\267f";
 @i-zws: 					"_";
+//remove this eventually
+	@i-google: 				"\e60b";
