fix:hack: Added important to breadcrumb extent switcher background to stop it hiding

--- a/libs/modules/breadcrumb.less
+++ b/libs/modules/breadcrumb.less
@@ -86,7 +86,7 @@
 }
 
 .breadcrumb__extent-link {
-    background-color: @heritage-blue-lightest;
+    background-color: @heritage-blue-lightest !important;
     display: inline-block;
     color: @black;
     padding: .35em .5em;
