--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -65,6 +65,12 @@
 		}
 	}
 
+	@media screen and (min-width: 751px) {
+		.section-nav__heading > a:focus {
+			outline: none;
+		}
+	}
+
 	a.section-nav__parent {
 		color: @heritage-blue;
 		font-weight: @font-weight-boldest;
