fix: order of sharing content in mockups

--- a/libs/jade/dev/DLA/before-you-claim/check-if-you-can-get.jade
+++ b/libs/jade/dev/DLA/before-you-claim/check-if-you-can-get.jade
@@ -2,6 +2,7 @@ block settings
 	- var title = "Check if you can get DLA for your child"
 	- var sidebar = true
 	- var toolbars = true
+	- var sharebar = true
 	- var mockup = true
 	- var dir = "../../../"
 
