fix: Fixed adviser sidebar to use :not([href]) rather than .active for active styles

--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -75,6 +75,7 @@
     }
     a {
         color: @inventive-teal;
+        &:not([href]),
         &.active {
             background-color: @inventive-teal-lightest;
             &:hover {
