dev:change: Added section links to 40more mockup

--- a/libs/jade/dev/site/40more.jade
+++ b/libs/jade/dev/site/40more.jade
@@ -10,6 +10,15 @@ block content
 	.articleContent
 		p We no longer cover this advice. However you can find similar advice on #[a GOV.UK].
 		p You can also ​search or browse the site to find the information you need.
+		.contents-page__section
+			h2 Help with your PIP claim
+			p #[a(href="#") How to claim PIP]
+			p #[a(href="#") How to claim PIP if you have a terminal illness]
+			p #[a(href="#") Help filling in your PIP claim form]
+			p #[a(href="#") Getting evidence to support your PIP claim]
+			p #[a(href="#") Sending your PIP claim form]
+			p #[a(href="#") Preparing for your PIP assessment]
+			p #[a(href="#") Changes that affect your PIP]
 		.field-group.field-group--buttons
 			input#field(type="search")
 			button.btn Search&nbsp;&nbsp;
