fix: Hiding adviser only content from print stylesheets

--- a/libs/base/print.less
+++ b/libs/base/print.less
@@ -88,7 +88,9 @@ aside,
 .title__subheading .btn,
 .title__subheading--footer,
 #chat-button,
-.footer-feedback {
+.footer-feedback,
+.callout--adviser,
+.dap-panel--advise {
 	display: none;
 }
 
