dev: debt results page

--- a/libs/jade/dev/debt/steps/step-2-results-single.jade
+++ b/libs/jade/dev/debt/steps/step-2-results-single.jade
@@ -37,27 +37,10 @@ block content
 			h2 Your results
 			.well
 				h3 These are your priority debts
-				p These are your most important debts because the consequences of not paying them are more serious than non-priority debts.
+				p This is a priority debt. You need to deal with it as quickly as possibly. Read our advice about dealing with
 				ul
-					li Mortgage/secured loan
+					li #[a(href="#") Mortgage/secured loan]
 					//p #[a(href="#") Talk to your mortgage lender straight away]
-
-					li Council Tax arrears
-					//p #[a(href="#") Talk to your council straight away]
-
-			.well
-				h3 These are your non-priority debts
-				p You’re often contacted more about non-priority debts, but the consequences of not paying them are less serious, so you should always deal with your priority debts first.
-
-				ul
-					li Overdraft
-					//p #[a(href="#") Talk to your loan company straight away]
-
-					li Telephone/mobile phone/internet packages		
-					//p #[a(href="#") Talk to your telephone/mobile phone/internet provider straight away]
-
-
-			p You should print these results, or note them down, so that you can keep in mind which debts you need to deal with first. 
 
 
 			a.button.btn-secondary.restart-button-icon(href="step-2.html") Restart
