fix: Gave breadcrumb extent switcher popup a z-index of 2 Thos should hopefully fix the Firefox specific issue of it appearing behind AO sticky navs

--- a/libs/modules/breadcrumb.less
+++ b/libs/modules/breadcrumb.less
@@ -127,6 +127,7 @@
 
 .breadcrumb__extent-popup {
     .popup;
+    z-index: 2;
     max-width: 400px;
     margin-top: @box-spacing;
     // Bring things a little closer together in this popup
