fix: Adviser revealables no longer show in the print stylesheet

--- a/libs/base/print.less
+++ b/libs/base/print.less
@@ -90,7 +90,8 @@ aside,
 #chat-button,
 .footer-feedback,
 .callout--adviser,
-.dap-panel--advise {
+.dap-panel--advise,
+.revealable--adviser {
 	display: none;
 }
 
