add: start design of local site

--- a/libs/jade/dev/template-letter/parking/letter-1.jade
+++ b/libs/jade/dev/template-letter/parking/letter-1.jade
@@ -1,5 +1,5 @@
 block settings
-	- var title = "Letter to complain about faulty goods"
+	- var title = "Letter to challenge a private parking ticket"
 	- var sidebar = true
 	- var mockup = true
 	- var dir = "../../"
@@ -28,17 +28,17 @@ block script
 
 block content
 	.articleContent
-		p Use this letter template to complain to a trader about faulty goods. It should help the trader understand your point of view and their legal obligation to sort out the problem.
+		p You can use this letter to challenge an unfair ticket you were given when parked on private land – for example at a supermarket or hospital car park. This could be because you didn't break the car park's rules, the rules weren't clear, or the parking charge is higher than £100.
 
-		p You can send the letter by post or copy the text into an email. If you’d prefer to talk to the trader on the phone or in person you could read it out to them.
+		p It’s important to include as much evidence as you can. For example, a photo of your car parked according to the rules or a copy of your ticket.
 
-		p Before you use this template, make sure you read our advice on how to return faulty goods.
+		p This template is to be used for guidance and may not suit your specific situation. If you need more help, contact your #[a(href="template-letter-list.html") nearest Citizens Advice].
 
 		.well--outline
 			.letter-steps
 				p Step 1 of 5
 
-			h2 Letter to complain about faulty goods
+			h2 Letter to challenge a private parking ticket
 			//h3 Before you start
 			p Below is an example of what your letter will look like.
 
