--- a/libs/template/template-site.jade
+++ b/libs/template/template-site.jade
@@ -188,6 +188,8 @@ html.no-js
 
 		.main-container
 			nav.main-breadcrumb
+				block local
+					
 				block breadcrumbs
 
 			block section-notice
