--- a/libs/modules/local.less
+++ b/libs/modules/local.less
@@ -15,7 +15,7 @@
         display: inline-block;
     }
     .local-branding {
-        background-color: @heritage-blue-lighter;
+        background-color: @heritage-yellow-lighter;
         padding: 2rem 0 1.75rem 0;
         vertical-align: middle;
         ul {
