--- a/libs/jade/accessibility.jade
+++ b/libs/jade/accessibility.jade
@@ -1,7 +1,7 @@
 block settings
 	- var title = "Accessibility"
 	- var sidebar = true
-	- var dir = "/"
+	- var dir = ""
 
 extends /template/template.jade
 
