add: local contact page

--- a/libs/modules/local.less
+++ b/libs/modules/local.less
@@ -9,13 +9,14 @@
     border-top: 1px solid @heritage-blue-lightest;
     .local-name {
         color: @heritage-blue;
-        font-size: @font-size-base;
+        font-size: @font-size-medium;
         font-weight: @font-weight-bolder;
         text-align: left;
         display: inline-block;
+        line-height: 4rem;
     }
     .local-branding {
-        background-color: @heritage-yellow-lighter;
+        background-color: @white;
         padding: 2rem 0 1.75rem 0;
         vertical-align: middle;
         ul {
