--- a/libs/jade/dev/site/404.jade
+++ b/libs/jade/dev/site/404.jade
@@ -1,13 +1,23 @@
 block settings
-	- var title = "404"
-	- var fullpage = true
+	- var title = "Page not found"
+	//- var fullpage = true
+	- var mockup = true
 	- var dir = "../../"
 	- var nofooter = true
 
-extends /template/template-site.jade
+extends /template/template.jade
 
 block content
-	.fullwidth(style="background-color: white;")
+	.span8-md
+		div
+			p If you entered a web address please check it was correct.
+			p You can also ​search or browse the site to find the information you need.
+		.field-group.field-group--buttons
+			input#field(type="search", placeholder="Search")
+			button.btn Search&nbsp;&nbsp;
+				i.icon-search
+
+	//.fullwidth(style="background-color: white;")
 		.fullwidth-content
 			.newrow
 				.span8-md
@@ -20,7 +30,7 @@ block content
 						button.btn Search&nbsp;&nbsp;
 							i.icon-search
 
-	.fullwidth-yellow
+	//.fullwidth-yellow
 		.fullwidth-content
 			h2#GetAdvice Get advice
 			ul.navigation-list
@@ -68,7 +78,7 @@ block content
 					h3 #[a(href="#") Education]
 					p School and higher education, support for learning, discrimination and financial advice.
 
-	.fullwidth
+	//.fullwidth
 		.fullwidth-content
 			h2#GetInvolved Get involved
 			ul.navigation-list
