fix: Added no-js styles for adviser only revealables, to make the editing interface easier

--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -57,6 +57,13 @@
     }
 }
 
+.no-js .revealable--adviser {
+    background-color: lighten(@inventive-teal-lightest, 9%);
+    &:after {
+        .adviser-badge;
+    }
+}
+
 .section-nav .adviser-nav {
     background-color: lighten(@inventive-teal-lightest, 9%);
     margin-top: 1rem;
